# dataflow-sdk

./: .gitignore  README.md  pyproject.toml
dataflow-sdk/: __init__.py
dataflow-sdk/biyao/entity/: client.py  result.py
dataflow-sdk/biyao/gateway/: client.py
dataflow-sdk/biyao/libs/: sink_pb2.py  sink_pb2.pyi  sink_pb2_grpc.py
dataflow-sdk/biyao/scrapy/: pipelines.py
dataflow-sdk/protobuf/google/api/: annotations_pb2.py  http_pb2.py
dataflow_sdk/: __init__.py
dataflow_sdk/entity/: __init__.py  address.py  client.py  model.py  result.py
dataflow_sdk/libs/protobuf/google/api/: annotations_pb2.py  field_behavior_pb2.py
dataflow_sdk/libs/sink/: sink_pb2.py  sink_pb2.pyi  sink_pb2_grpc.py
dataflow_sdk/scrapy/: pipelines.py
tests/: item_sink_test.py  item_test.py
